// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalCreateFusionButton /> should render correctly 1`] = `
<div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    id="add-proposal-fusion"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <FormattedMessage
      id="proposal.add_fusion"
      values={Object {}}
    />
  </Button>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <FormattedMessage
          id="proposal.add_fusion"
          values={Object {}}
        />
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <ForwardRef(Relay(Connect(injectIntl(ReduxForm))))
        query={
          Object {
            "$refType": null,
            "projects": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1",
                    "steps": Array [
                      Object {
                        "id": "s1",
                        "type": "collect",
                      },
                      Object {
                        "id": "s2",
                        "type": "depot",
                      },
                    ],
                    "title": "Project 1",
                  },
                },
                Object {
                  "node": Object {
                    "id": "2",
                    "steps": Array [],
                    "title": "Project 2",
                  },
                },
              ],
            },
          }
        }
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.cancel"
        onClose={[Function]}
      />
      <Connect(SubmitButton)
        disabled={true}
        id="confirm-proposal-merge-create"
        isSubmitting={false}
        label="create-a-new-proposal"
        onSubmit={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;

exports[`<ProposalCreateFusionButton /> should render correctly when submitting 1`] = `
<div>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    id="add-proposal-fusion"
    onClick={[Function]}
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <FormattedMessage
      id="proposal.add_fusion"
      values={Object {}}
    />
  </Button>
  <Modal
    animation={false}
    aria-labelledby="contained-modal-title-lg"
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    bsSize="large"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={true}
  >
    <ModalHeader
      bsClass="modal-header"
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle
        bsClass="modal-title"
        componentClass="h4"
        id="contained-modal-title-lg"
      >
        <FormattedMessage
          id="proposal.add_fusion"
          values={Object {}}
        />
      </ModalTitle>
    </ModalHeader>
    <ModalBody
      bsClass="modal-body"
      componentClass="div"
    >
      <ForwardRef(Relay(Connect(injectIntl(ReduxForm))))
        query={
          Object {
            "$refType": null,
            "projects": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "1",
                    "steps": Array [
                      Object {
                        "id": "s1",
                        "type": "collect",
                      },
                      Object {
                        "id": "s2",
                        "type": "depot",
                      },
                    ],
                    "title": "Project 1",
                  },
                },
                Object {
                  "node": Object {
                    "id": "2",
                    "steps": Array [],
                    "title": "Project 2",
                  },
                },
              ],
            },
          }
        }
      />
    </ModalBody>
    <ModalFooter
      bsClass="modal-footer"
      componentClass="div"
    >
      <CloseButton
        label="global.cancel"
        onClose={[Function]}
      />
      <Connect(SubmitButton)
        disabled={true}
        id="confirm-proposal-merge-create"
        isSubmitting={true}
        label="create-a-new-proposal"
        onSubmit={[Function]}
      />
    </ModalFooter>
  </Modal>
</div>
`;
